2006-08-18  Tim Jenness  <tjenness@cpan.org>

	* Temp.pm: pre-emptively load Carp::Heavy. If we don't when we run out of file
	handles and attempt to call croak() we get an error message telling
	us that Carp::Heavy won't load rather than an error telling us we
	have run out of file handles. (pointed out by bjoern_at_hoehrmann.de RT #14151)

	* Temp.pm: Remove eg. from comments and replace with e.g. In pod
	replace "e.g." with "for example". (David Landgren)

	* Temp.pm: Correct synopsis concerning the arguments to the
	File::Temp constructor (Peter Valdemar Moerch).

	* Temp.pm: Update documentation to note that croak() will be
	called by tempfile() and File::Temp->new if a problem occurs (thanks to Steve
	Hay for pointing this out).

2005-09-01  Tim Jenness  <tjenness@cpan.org>

	* Temp.pm: Sebastien Aperghis-Tramoni indicates that File::Temp
	works with perl 5.004 so change the minimum perl version. (RT #14149)

	* Temp.pm: Use effective uid rather than real uid (Alexey Tourbin RT #14218)

2005-02-22  Tim Jenness  <tjenness@cpan.org>

	--- RELEASE V0.16 ---
	
	* Temp.pm: Remove spurious debug statement

2005-02-21  Tim Jenness  <tjenness@cpan.org>

	--- RELEASE V0.15 ---
	
	* Temp.pm (unlink_on_destroy): Add post-object creation method to
	control whether the temp file will be unlinked when the object
	goes out of scope.
	
	* Temp.pm: Increase maximum number of tries before aborting.

	* Temp.pm: Add $KEEP_ALL to allow the temporary files to be
	retained whilst debugging (suggestion from Ed Avis [and others]).

	* Temp.pm: Temp files should have been opened O_NOFOLLOW rather
	than O_FOLLOW! (thanks to Marc Tardif)

	* Temp.pm: Add cleanup() function so that temp files that would be
	removed by an END block can be removed by a daemon. (RT wishlist
	item #6928 by Robert Rothenberg)

	* Temp.pm: Force chmod on file before unlinking it. This can be a
	problem on windows (see RT bug #6935). tempdir() has been fixed by